--- a/css/colors.css
+++ b/css/colors.css
@@ -23,4 +23,9 @@
     --warning: #ffc107;
     --error: #dc3545;
 
+    /* Aside colors */
+    --hover: #a0a0a0;
+    --aside-background: #d3d3d3;
+    --gray-900: #1e1e1e;
+
   }
