--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,6 +1,6 @@
-
 nav {
-
+    background-color: var(--aside-background);
+    height: 4rem;
 }
 
 .nav-list {
@@ -10,7 +10,13 @@ nav {
     flex-direction: row;
     list-style: none;
     gap: 5rem;
-    height: 3rem;
+    height: 100%;
+}
+
+.nav-tab:hover {
+    text-decoration: none;
+    color: black;
+    background-color: var(--hover);
 }
 
 .nav-tab > *{
