--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
 @import 'aside.css';
 @import 'colors.css';
 @import 'variables.css';
+@import 'interactive-content-container.css';
+@import 'homepage.css';
 
 * {
     box-sizing: border-box;
@@ -20,6 +22,5 @@ body {
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 1rem;
-    background-color: red;
     height: 100%;
 }
