--- a/css/homepage.css
+++ b/css/homepage.css
@@ -5,3 +5,17 @@
     justify-content: center;
     height: 100vh;
 }
+
+.main-content-cards {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.user-card {
+    gap: 2rem;
+    width: 200px;
+    height: 200px;
+    border: 1px solid #444;
+}
