--- a/css/homepage.css
+++ b/css/homepage.css
@@ -6,16 +6,25 @@
     height: 100vh;
 }
 
+
 .main-content-cards {
+    text-align: center;
+}
+
+/*HTML klass*/
+.user-cards {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
+    gap: 30px;
 }
 
+/*Skapa klass i javascript*/
 .user-card {
-    gap: 2rem;
     width: 200px;
     height: 200px;
     border: 1px solid #444;
+    padding: 10px;
+    background-color: bisque;
 }
