--- a/css/aside.css
+++ b/css/aside.css
@@ -2,15 +2,20 @@
     display: flex;
     flex-direction: column;
     background-color: var(--aside-background);
-    height: auto;
-    gap: 2rem;
+    align-items: center;
+    justify-content: center;
+    gap: .5rem;
 }
 
 .aside-user {
     display: grid;
     grid-template-columns: 1fr 2fr;
     align-items: center;
-    padding: 1rem;
+    height: auto;
+    width: 95%;
+    padding: .5rem;
+    cursor: pointer;
+    border-radius: var(--border-radius);
 }
 
 .aside-user:hover {
@@ -18,6 +23,7 @@
     grid-template-columns: 1fr 2fr;
     align-items: center;
     background-color: var(--hover);
+    backdrop-filter: blur(5px);
 }
 
 .aside-user img {
