--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 @import 'variables.css';
 @import 'interactive-content-container.css';
 @import 'homepage.css';
+@import 'user-posts.css';
 
 * {
     box-sizing: border-box;
@@ -19,6 +20,5 @@ body {
 .main-container {
     display: grid;
     grid-template-columns: 1fr 3fr;
-    gap: 1rem;
     height: 100%;
 }
