Added functionality to display posts comments

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 @import 'interactive-content-container.css';
 @import 'homepage.css';
 @import 'user-posts.css';
+@import 'comments-styles.css';
 
 * {
     box-sizing: border-box;
