--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,3 +1,10 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
 .home-page-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -21,17 +28,18 @@
     flex-direction: row;
     justify-content: space-evenly;
     gap: 30px;
+    margin-right: 10px;
 }
 
 /*Skapa klass i javascript*/
 .user-card {
-    width: calc(25% - 30px);
+    width: calc(30% - 30px);
     height: 200px;
-    border: 1px solid #444;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border: 1px solid #999;
+    border-radius: 20px;
+    box-shadow: 2px 5px 15px rgba(0, 0, 0, 0.1);
     padding: 15px;
-    background-color: bisque;
+    background-color: #eaeaea;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -43,28 +51,35 @@
 
 .user-img {
     text-align: center;
-    margin-bottom: 15px;
 }
 
 .user-img img {
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
     border-radius: 50%;
     object-fit: cover;
 }
 
 .user-info {
     text-align: center;
+    overflow: hidden;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.user-info h3 {
+    margin-bottom: 8px;
 }
 
 .user-info p {
-    margin: 5px 0;
     color: #333;
+    font-size: 14px;
 }
 
 .user-info a {
     color: #222;
     text-decoration: none;
+    margin-bottom: 10px;
+    font-size: 10px;
 }
 
 .user-info a:hover {
