--- a/css/styles.css
+++ b/css/styles.css
@@ -15,11 +15,14 @@
 
 body {
     font-family: Arial, sans-serif;
-    height: 100vh;
+    min-height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
 }
 
 .main-container {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    height: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
 }
