--- a/css/interactive-content-container.css
+++ b/css/interactive-content-container.css
@@ -1,3 +1,12 @@
+.interactive-content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  flex-grow: 1;
+  padding: 1rem auto;
+}
+
 .todo-wrapper {
   background: linear-gradient(135deg, #fdfbfb, #ebedee);
   border-radius: 1rem;
