--- a/css/homepage.css
+++ b/css/homepage.css
@@ -22,35 +22,34 @@
     justify-content: space-evenly;
     gap: 30px;
     margin-right: 10px;
+    margin-bottom: 30px;
 }
 
 /*Skapa klass i javascript*/
 .user-card {
     width: calc(30% - 30px);
     height: 200px;
-    border: 1px solid #999;
-    border-radius: 20px;
-    box-shadow: 2px 5px 15px rgba(0, 0, 0, 0.1);
-    padding: 15px;
-    background-color: #eaeaea;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    padding: 15px;
+}
+
+.user-card,
+.post-preview {
+    border: 1px solid #999;
+    border-radius: 10px;
+    box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.1);
+    background-color: #eaeaea;
+}
+
+.post-preview {
+    padding: 10px;
+    margin-top: 15px;
 }
 
 .user-card:hover {
     cursor: pointer;
     transform: translateY(-5px);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-}
-
-.user-img {
-    text-align: center;
-}
-
-.user-img img {
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    object-fit: cover;
 }
 
 .user-info {
@@ -60,7 +59,7 @@
 }
 
 .user-info h3 {
-    margin-bottom: 8px;
+    margin: 8px auto;
 }
 
 .user-info p {
