--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,5 +1,5 @@
 nav {
-    background-color: var(--aside-background);
+    background-color: var(--background-color);
     height: 4rem;
     flex-shrink: 0;
 }
@@ -12,12 +12,15 @@ nav {
     list-style: none;
     gap: 0; /* Removed the gap so elements appear directly next to each other */
     height: 100%;
+    color: var(--text-color);
 }
 
 .nav-tab {
-    height: 100%;
+    height: auto;
+    border-radius: var(--border-radius);
     display: flex;
     align-items: center;
+
 }
 
 .nav-tab:hover {
@@ -36,15 +39,18 @@ nav {
     align-items: center;
 }
 
-/* Active navbar item styling */
+/* Active navbar item styling 
 .nav-active {
     background-color: var(--primary);
     box-shadow: var(--box-shadow);
-    height: 100%;
 }
 
-/* Style for the link inside the active nav item */
+
+
+ Style for the link inside the active nav item 
 .nav-active a {
     color: var(--white) !important;
-    border-radius: 0; /* Remove border radius for full-height effect */
+    border-radius: 0; /* Remove border radius for full-height effect 
 }
+
+*/
