User info details top

--- a/css/colors.css
+++ b/css/colors.css
@@ -4,6 +4,8 @@
     --primary-dark: #005bb5;
     --primary-light: #63b3ff;
     --color-5: red;
+
+    --background-color-secondary: rgb(220, 220, 196);
   
     /* Neutral / grayscale */
     --white: #ffffff;
