--- a/css/colors.css
+++ b/css/colors.css
@@ -5,6 +5,7 @@
     --primary-light: #63b3ff;
     --color-5: red;
 
+    --background-color: #F9F9F4;
     --background-color-secondary: rgb(220, 220, 196);
   
     /* Neutral / grayscale */
@@ -30,7 +31,6 @@
 
     --text-color: #58615C;
 
-    --backgrdound-color: #F9F9F4;
-    --aside-background: #d3d3d3;
+    
     --gray-900: #1e1e1e;
   }
