--- a/css/homepage.css
+++ b/css/homepage.css
@@ -11,10 +11,12 @@
     width: 100%;
     margin-bottom: 30px;
     padding: 15px;
-    background-color: #f9f9f9;
+    background-color: var(--background-color);
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
+
+
 
 .main-content-cards {
     text-align: center;
