--- a/css/homepage.css
+++ b/css/homepage.css
@@ -17,7 +17,7 @@
 }
 
 .interactive-content-container {
-    background-color: rgb(220, 220, 196);
+    background-color: rgb(222, 222, 207);
 }
 
 .main-content-cards {
@@ -44,7 +44,7 @@
     border: 1px solid #999;
     border-radius: 10px;
     box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.1);
-    background-color: #eaeaea;
+    background-color: #F9F9F4;
 }
 
 .post-preview {
