--- a/css/colors.css
+++ b/css/colors.css
@@ -26,7 +26,7 @@
   /* Aside colors */
   --hover: #E8E8E0;
 
-  --text-color: rgb(129, 162, 129);
+  --text-color: blue;
 
   --backgrdound-color: #F9F9F4;
   --aside-background: #d3d3d3;
