--- a/css/user-posts.css
+++ b/css/user-posts.css
@@ -13,7 +13,7 @@
     max-width: 1200px;
     padding: 1.5rem;
     margin-bottom: 1.5rem;
-    background-color: #f9f9f9;
+    background-color: var(--background-color);
     border-radius: var(--border-radius);
     box-shadow: var(--border-shadow);
     background-color: var(--white);
@@ -35,7 +35,6 @@
     height: 100px;
     border-radius: 50%;
     object-fit: cover;
-    border: 3px solid #fff;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
 
