--- a/css/user-posts.css
+++ b/css/user-posts.css
@@ -4,13 +4,12 @@
     align-items: center;
     justify-content: flex-start;
     flex-grow: 1;
-    overflow-y: auto;
+    padding: 20px;
 }
 
 /* User header styling */
 .user-header-container {
     width: 100%;
-    max-width: 1200px;
     padding: 1.5rem;
     margin-bottom: 1.5rem;
     background-color: #f9f9f9;
@@ -126,13 +125,12 @@
 /* Posts container styles */
 .posts-container {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
-    margin-top: 1rem;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 2em;
     width: 100%;
-    max-width: 1200px;
+    overflow-y: auto;
+    max-height: calc(100vh - 100px);
 }
 
 .post-card {
@@ -142,7 +140,6 @@
     box-shadow: var(--border-shadow);
     background-color: var(--white);
     backdrop-filter: var(--backdrop-filter);
-    width: 15rem;
     flex-grow: 0;
     flex-shrink: 1;
 }
