--- a/css/interactive-content-container.css
+++ b/css/interactive-content-container.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  width: 100%;
   flex-grow: 1;
-  padding: 1rem auto;
   background-color: var(--background-color-secondary);
 }
 
