--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    min-height: 100vh;
+    height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
