--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
 
 body {
     font-family: Arial, sans-serif;
+    color: #254024;
     min-height: 100vh;
     width: 100vw;
     display: flex;
@@ -37,7 +38,7 @@ body.menu-open {
     .main-container {
         flex-direction: column;
     }
-    
+
     .interactive-content-container {
         padding-top: 1rem;
     }
