--- a/css/colors.css
+++ b/css/colors.css
@@ -1,9 +1,13 @@
 :root {
+
     /* Primary colors */
     --primary: #b9fb9f;
     --primary-dark: #005bb5;
     --primary-light: #63b3ff;
     --color-5: red;
+
+    --background-color: #F9F9F4;
+    --background-color-secondary: rgb(220, 220, 196);
   
     /* Neutral / grayscale */
     --white: #ffffff;
@@ -23,22 +27,28 @@
     --warning: #ffc107;
     --error: #dc3545;
 
-    /* Aside colors */
-    --hover: #E8E8E0;
+  /* Neutral / grayscale */
+  --white: #ffffff;
+  --black: #000000;
+  --gray-100: #f5f5f5;
+  --gray-300: #dcdcdc;
+  --gray-500: #a0a0a0;
+  --gray-700: #4a4a4a;
+  --gray-900: #1e1e1e;
 
-    --text-color: #58615C;
+  /* Accent colors */
+  --accent: #ff4081;
+  --accent-dark: #c60055;
+
   /* Success / warning / error */
   --success: #28a745;
   --warning: #ffc107;
   --error: #dc3545;
 
-  /* Homepage colors */
-
-
   /* Aside colors */
   --hover: #E8E8E0;
 
-  --text-color: #3fe188;
+  --text-color: blue;
 
   --backgrdound-color: #F9F9F4;
   --aside-background: #d3d3d3;
