--- a/css/comments-styles.css
+++ b/css/comments-styles.css
@@ -24,8 +24,8 @@
 .comment-item {
   padding: 8px;
   margin-bottom: 8px;
-  background-color: white;
-  border-left: 3px solid #b9fb9f;
+  background-color: inherit;
+  border-left: 3px solid #3498db;
   border-radius: 3px;
   font-size: 14px;
   line-height: 1.4;
