--- a/css/interactive-content-container.css
+++ b/css/interactive-content-container.css
@@ -3,9 +3,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  width: 100%;
   flex-grow: 1;
-  padding: 1rem auto;
-  background-color: var(--background-color);
+  background-color: var(--background-color-secondary);
 }
 
 .todo-wrapper {
@@ -17,54 +17,71 @@
   max-width: 600px;
   margin: 0 auto;
   margin-top: 4rem;
-}
+  max-height: 700px;
+  overflow-y: auto;
+  margin-top: 1rem;
+  padding-right: 0.5rem;
 
-.todo-wrapper h2 {
-  font-size: 1.8rem;
-  color: #333;
-  margin-bottom: 1rem;
-  text-align: center;
-}
-
-.todo-list {
-  list-style: none;
-  padding-left: 0;
-  margin: 0;
-}
-
-.todo-list li {
-  display: flex;
-  align-items: center;
-  background-color: #fff;
-  margin-bottom: 0.8rem;
-  padding: 0.8rem;
-  border-radius: 0.5rem;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-  transition: background-color 0.3s;
-}
-
-.todo-list li:hover {
-  background-color: #f9f9f9;
-}
-
-.todo-list li.checked label {
-  text-decoration: line-through;
-  color: #888;
-}
-
-.todo-list li input[type="checkbox"] {
-  margin-right: 1rem;
-  transform: scale(1.2);
-}
-
-/* Enkel fadeIn-animation */
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(10px);
+  .todo-wrapper h2 {
+    font-size: 1.8rem;
+    color: #333;
+    margin-bottom: 1rem;
+    text-align: center;
   }
-  to {
-    opacity: 1;
-    transform: translateY(0);
+
+  .todo-list {
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+  }
+
+  .todo-list li {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    margin-bottom: 0.8rem;
+    padding: 0.8rem;
+    border-radius: 0.5rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+    transition: background-color 0.3s;
+  }
+
+  .todo-list li:hover {
+    background-color: #f9f9f9;
+  }
+
+  .todo-list li.checked label {
+    text-decoration: line-through;
+    color: #888;
+  }
+
+  .todo-list li input[type="checkbox"] {
+    margin-right: 1rem;
+    transform: scale(1.2);
+  }
+
+  .todo-wrapper::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .todo-wrapper::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 4px;
+  }
+
+  .todo-wrapper::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+
+  /* Enkel fadeIn-animation */
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
 }
