--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
+@import 'colors.css';
 @import 'navbar.css';
 @import 'aside.css';
-@import 'colors.css';
 @import 'variables.css';
 @import 'interactive-content-container.css';
 @import 'homepage.css';
@@ -15,8 +15,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    color: #254024;
-    min-height: 100vh;
+    height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -38,7 +37,7 @@ body.menu-open {
     .main-container {
         flex-direction: column;
     }
-
+    
     .interactive-content-container {
         padding-top: 1rem;
     }
