--- a/css/homepage.css
+++ b/css/homepage.css
@@ -28,8 +28,8 @@
 
 .logo-container {
     flex-shrink: 0;
-    width: 260px;
-    margin: 30px;
+    width: 160px;
+    margin: 0 30px 0 60px;
     /* Making the logo container smaller */
 }
 
@@ -64,17 +64,52 @@
 
 .home-paragraph-two {
     max-width: 650px;
-    background-color: #243a23;
-    color: rgb(246, 242, 224);
+    /* background-color: var(--primary); */
+    /* background: linear-gradient(80deg, #243a23, transparent); */
+    /* color: rgb(246, 242, 224); */
+    color: #243a23;
     padding: 30px;
-    border-radius: 10px;
+    /* border-radius: 10px; */
+    border-top: 1px solid #243a23;
+    border-bottom: 1px solid #243a23;
     margin-bottom: 20px;
-    letter-spacing: 0.1em;
-    font-size: smaller;
+    letter-spacing: 0.03rem;
     font-weight: lighter;
     line-height: 1.4;
 }
 
+
+@media (max-width: 650px) {
+
+    .home-card-horizontal {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 20px;
+        margin: 20px;
+    }
+
+    .home-heading {
+        margin-top: 0;
+    }
+
+    .home-paragraph {
+        font-size: 2.3rem;
+        font-weight: lighter;
+        margin-bottom: 30px;
+    }
+
+    .home-paragraph-two {
+        padding: 10px;
+    }
+
+    .logo-container {
+        width: 200px;
+        margin: 30px;
+        /* Making the logo container smaller */
+    }
+}
 
 
 /* Layout for home content cards */
