--- a/css/comments-styles.css
+++ b/css/comments-styles.css
@@ -25,7 +25,7 @@
   padding: 8px;
   margin-bottom: 8px;
   background-color: inherit;
-  border-left: 3px solid #3498db;
+  border-left: 3px solid #b9fb9f;
   border-radius: 3px;
   font-size: 14px;
   line-height: 1.4;
