--- a/css/homepage.css
+++ b/css/homepage.css
@@ -9,10 +9,10 @@
 
 .home-header {
     width: 100%;
-    margin-bottom: 30px;
-    padding: 15px;
+    margin-bottom: 20px;
+    padding: 10px;
     background-color: var(--background-color);
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
@@ -53,7 +53,7 @@
     font-size: 0.9rem;
     text-transform: uppercase;
     font-weight: lighter;
-    color: var(--primary);
+    color: #9ed489;
 }
 
 .home-paragraph {
@@ -124,30 +124,30 @@
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-evenly;
-    gap: 30px;
+    gap: 20px;
     width: 100%;
 }
 
 /*Skapa klass i javascript*/
 .user-card {
-    width: 300px;
-    height: 200px;
+    width: 320px;
+    height: auto;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     padding: 10px;
     margin-bottom: 10px;
 }
 
-.user-card,
-.post-preview {
-    border: 1px solid #999;
+.user-card {
     border-radius: 10px;
-    box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.1);
     background-color: #F9F9F4;
+    padding: 20px;
 }
 
 .post-preview {
+    background-color: var(--primary);
     padding: 10px;
     margin-top: 15px;
+    border-radius: 10px;
 }
 
 .user-card:hover {
@@ -167,7 +167,6 @@
 }
 
 .user-info p {
-    color: #333;
     font-size: 14px;
 }
 
@@ -189,45 +188,4 @@
     height: auto;
     border-radius: 50%;
     box-shadow: var(--box-shadow);
-}
-
-/* Horizontal layout for the home card logo and text */
-.home-card-horizontal {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 20px;
-    width: 100%;
-}
-
-.logo-container {
-    flex-shrink: 0;
-    width: 80px;
-    /* Making the logo container smaller */
-}
-
-.home-logo {
-    width: 100%;
-    height: auto;
-    border-radius: 50%;
-    box-shadow: var(--box-shadow);
-}
-
-.home-text-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: left;
-}
-
-.home-text-container h1 {
-    margin-top: 0;
-    margin-bottom: 10px;
-    font-size: 1.8rem;
-}
-
-.home-text-container p {
-    margin: 0;
-    font-size: 1rem;
 }
