--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,42 +1,52 @@
 nav {
-    background-color: var(--background-color);
-    height: 4rem;
-    flex-shrink: 0;
+  background-color: var(--background-color);
+  height: 4rem;
+  flex-shrink: 0;
 }
 
 .nav-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    list-style: none;
-    gap: 0; /* Removed the gap so elements appear directly next to each other */
-    height: 100%;
-    color: var(--text-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  list-style: none;
+  gap: 0; /* Removed the gap so elements appear directly next to each other */
+  height: 100%;
+  color: var(--text-color);
 }
 
 .nav-tab {
-    height: auto;
-    border-radius: var(--border-radius);
-    display: flex;
-    align-items: center;
-
+  height: auto;
+  border-radius: var(--border-radius);
+  display: flex;
+  align-items: center;
 }
 
 .nav-tab:hover {
-    text-decoration: none;
-    color: black;
-    background-color: var(--hover);
+  text-decoration: none;
+  color: black;
+  background-color: var(--hover);
 }
 
-.nav-tab > *{
-    text-decoration: none;
-    color: black;
-    border-radius: var(--border-radius);
-    padding: 0.5rem 1rem;
-    height: 100%;
-    display: flex;
-    align-items: center;
+.nav-tab > * {
+  text-decoration: none;
+  color: black;
+  border-radius: var(--border-radius);
+  padding: 0.5rem 1rem;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.nav-tab a {
+  text-decoration: none;
+  padding: 10px 20px;
+  display: inline-block;
+  color: black;
+}
+
+.nav-tab a.active {
+  background-color: lightgreen;
 }
 
 /* Active navbar item styling 
