--- a/css/aside.css
+++ b/css/aside.css
@@ -79,7 +79,7 @@
     display: block;
     width: 100%;
     height: 3px;
-    background-color: var(--text-color);
+    background-color: var(--primary);
     border-radius: 3px;
     transition: transform 0.3s ease, opacity 0.3s ease;
 }
